fix: Properly handle visibility of elements

--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -73,7 +73,6 @@ div[name="links-div"] {
 
 .pure-table {
     width: 98%;
-    visibility: hidden;
 }
 
 .pure-table caption {
